--- a/src/app/components/lista-usuarios/lista-usuarios.component.html
+++ b/src/app/components/lista-usuarios/lista-usuarios.component.html
@@ -1,3 +1,14 @@
-<p>
-  lista-usuarios works!
-</p>
+<h1>Usuarios</h1>
+<hr>
+
+
+<ul class="list-group">
+  <li class="list-group-item" *ngFor="let usuario of usuariosActivos | async">
+      {{usuario.nombre}}
+
+      <span class="badge badge-info">{{usuario.sala}}</span>
+      <br> 
+      <span class="badge badge-success">{{usuario.id}}</span>
+  </li>
+</ul>
+
